--- a/packages/ui/styles/themes/_default.scss
+++ b/packages/ui/styles/themes/_default.scss
@@ -2,6 +2,9 @@
 
 @import '../reset';
 
+body {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
 
 $primary: $gray-0;
 $background: $white;
@@ -13,3 +16,11 @@ $border-radius: 4px;
 $border-width: 1px;
 
 $shadow: 0 2px 4px rgba($black, 0.1);
+
+span.bold {
+  font-weight: 600;
+}
+
+.bg-white {
+  background-color: $white;
+}
