--- a/apps/web/src/layout/anonymous/_anonymous.scss
+++ b/apps/web/src/layout/anonymous/_anonymous.scss
@@ -1,7 +1,7 @@
 div#app-container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-  background-color: #f0f0f0;
+  align-items: center;
+  overflow: hidden;
 }
