--- a/apps/web/src/layout/anonymous/components/content/_content.scss
+++ b/apps/web/src/layout/anonymous/components/content/_content.scss
@@ -1,7 +1,11 @@
-#content {
-  width: 100%;
-  height: 100%;
+main {
   display: flex;
   flex-direction: column;
-  background-color: azure;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  // min-height: 560px;
+  max-width: 970px;
+  height: 660px;
+  overflow-y: auto;
 }
