--- a/apps/web/src/layout/anonymous/components/footer/_footer.scss
+++ b/apps/web/src/layout/anonymous/components/footer/_footer.scss
@@ -1,8 +1,14 @@
 footer {
   position: absolute;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  width: 100%;
   bottom: 0;
+
+  width: 100%;
+  height: 50px;
+  min-height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-top: 1px solid black;
 }
