--- a/apps/web/src/layout/anonymous/components/header/_header.scss
+++ b/apps/web/src/layout/anonymous/components/header/_header.scss
@@ -1,5 +1,13 @@
 header {
-  background-color: #333;
-  color: #fff;
+  width: 100%;
+  height: 50px;
+  min-height: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.45) 0px 10px 11px -6px;
+
+  margin-bottom: 1rem;
 }
